<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        layout="@layout/logo_with_tagline" />

    <TextView
        style="@style/NormalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"/>

        <View style="@style/Divider"/>

        <TextView
            style="@style/NormalText"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_features"/>

        <TextView
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/existing_feature_1"/>

        <TextView
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/existing_feature_2"/>

        <TextView
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/existing_feature_3"/>

        <TextView
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/existing_feature_4"/>

        <TextView
            style="@style/NormalText"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_features"/>

        <TextView
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_feature_1"/>

        <TextView
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_feature_2"/>

        <View style="@style/Divider"/>

        <TextView
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version"/>

        <View style="@style/Divider"/>
    </LinearLayout>

</ScrollView>